--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,31 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<div class="">
+	<div class="border content-justify-center">
+		<nav class=" navbar navbar-expand-rg ">
+			<div class="nav-item">
+				<div class="row">
+					<input type="text" class="form-control" style="width:400px">
+					<button class="btn">Search</button>
+				</div>
+			</div>
+			<div class="content-justify-end row">
+				<div class="nav-item"><a href="" class="nav-link">Parth</a></div>
+				<div class="nav-item"><a href="" class="nav-link">Home</a></div>
+				<div class="nav-item"><a href="" class="nav-link">Create</a></div>
+				<div class="nav-item"><button class="btn" style="width:50px;background-color:blue">FR</button></div>&nbsp;
+				<div class="nav-item"><button class="btn" style="width:50px;background-color:blue">Msg</button>
+				</div>&nbsp;
+				<div class="nav-item"><button class="btn" style="width:50px;background-color:blue">Nf</button></div>&nbsp;
+        <div class="nav-item"><button class="btn" style="width:50px;background-color:blue">QH</button></div>
+        &nbsp;
+        <div class="nav-item"><button class="btn" style="width:20px;background-color:blue">^</button></div>
+			</div>
+			<!-- <div class="nav-item"><a href="" class="nav-link">Lists</a></div>
+		<div class="nav-item"><a href="" class="nav-link">Profile</a></div>
+		<div class="nav-item"><a href="" class="nav-link">More</a></div> -->
+		</nav>
+	</div>
+	<div class="" style="margin-left:10px">
+		<div>primaryColumn</div>
+		<div>secondColumn </div>
+	</div>
+</div>
